Changed index.html nav and footer nav items

--- a/index.html
+++ b/index.html
@@ -91,15 +91,16 @@
                     >Find a Job</a
                   >
                 </li>
+                <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="./pages/work.html"
                     >View Work Page</a
                   >
                 </li>
-                <li><hr class="dropdown-divider" /></li>
+                <!-- <li><hr class="dropdown-divider" /></li>
                 <li>
                   <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+                </li> -->
               </ul>
             </li>
             <!-- <li class="nav-item">
@@ -356,7 +357,7 @@
                   >
                 </li>
                 <li>
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/work.html"
                     >Work <span>&gt;</span></a
                   >
                 </li>
@@ -380,8 +381,10 @@
             <nav>
               <ul class="list-unstyled text-light">
                 <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
+                  <a
+                    class="footer-list-item"
+                    href="./pages/work.html#job-application"
+                    >Get Help Finding Work <span>&gt;</span></a
                   >
                 </li>
                 <li>
@@ -489,13 +492,20 @@
             <nav>
               <ul class="list-unstyled text-light text-center">
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Live <span>&gt;</span></a
+                  <a
+                    class="footer-list-item"
+                    href="./pages/work.html#job-application"
+                    >Get Help Finding Work <span>&gt;</span></a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="#"
-                    >Work <span>&gt;</span></a
+                    >Jobs Page <span>&gt;</span></a
+                  >
+                </li>
+                <li class="scrollIn footer-anchor-nav-scrollIn">
+                  <a class="footer-list-item" href="#"
+                    >Live <span>&gt;</span></a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
