--- a/pages/work.html
+++ b/pages/work.html
@@ -77,9 +77,13 @@
                 Work
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Find a Job</a></li>
                 <li>
                   <a class="dropdown-item" href="#">View Work Page</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#job-application"
+                    >Find a Job</a
+                  >
                 </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
