--- a/pages/work.html
+++ b/pages/work.html
@@ -476,7 +476,13 @@
             </div>
           </div> -->
           <div class="col-12">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button
+              id="form-submit-button"
+              type="submit"
+              class="btn btn-primary btn-lg"
+            >
+              Submit
+            </button>
           </div>
         </form>
       </article>
