work.html netlify submission init

--- a/pages/work.html
+++ b/pages/work.html
@@ -240,7 +240,12 @@
         </p>
 
         <!------------------------------------------------- FORM ------------------------------------------------->
-        <form class="row g-3 py-5">
+        <form
+          name="job-search-contact-form"
+          method="POST"
+          data-netlify="true"
+          class="row g-3 py-5"
+        >
           <div class="col-md-6">
             <label for="firstName" class="form-label"
               >First Name <span class="text-danger">*</span></label
