Added name attributes to form inputs

--- a/pages/work.html
+++ b/pages/work.html
@@ -254,6 +254,7 @@
               type="text"
               class="form-control"
               id="firstName"
+              name="first-name"
               placeholder="John"
               required
             />
@@ -266,6 +267,7 @@
               type="text"
               class="form-control"
               id="lastName"
+              name="last-name"
               placeholder="Smith"
               required
             />
@@ -278,6 +280,7 @@
               type="email"
               class="form-control"
               id="email"
+              name="email"
               placeholder="name@site.com"
               required
             />
