Rewrote form inputs to comply with netlify bot submissions

--- a/pages/work.html
+++ b/pages/work.html
@@ -291,6 +291,7 @@
               type="tel"
               class="form-control"
               id="phoneNumber"
+              name="phone-number"
               pattern="^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$"
               placeholder="123-456-7890"
             />
@@ -305,7 +306,7 @@
                 type="radio"
                 name="highschoolRadio"
                 id="highschoolRadioTrue"
-                value="true"
+                value="I have graduated high school"
                 required
               />
               <label class="form-check-label" for="highschoolRadioTrue">
@@ -318,7 +319,7 @@
                 type="radio"
                 name="highschoolRadio"
                 id="highschoolRadioFalse"
-                value="false"
+                value="I have not graduated high school"
                 checked
                 required
               />
@@ -339,7 +340,7 @@
                 type="radio"
                 name="collegeRadio"
                 id="collegeRadioTrue"
-                value="true"
+                value="I have graduated college/trade school"
                 required
               />
               <label class="form-check-label" for="collegeRadioTrue">
@@ -352,7 +353,7 @@
                 type="radio"
                 name="collegeRadio"
                 id="collegeRadioFalse"
-                value="false"
+                value="I have not graduated college/trade school"
                 required
               />
               <label class="form-check-label" for="collegeRadioFalse">
@@ -400,7 +401,7 @@
                 type="radio"
                 name="didYouGraduateRadio"
                 id="didYouGraduateRadioTrue"
-                value="yes"
+                value="I have graduated college/trade school"
               />
               <label class="form-check-label" for="didYouGraduateRadioTrue">
                 Yes
@@ -412,7 +413,7 @@
                 type="radio"
                 name="didYouGraduateRadio"
                 id="didYouGraduateRadioFalse"
-                value="no"
+                value="I have not graduated college/trade school"
               />
               <label class="form-check-label" for="didYouGraduateRadioFalse">
                 No
