Input values changed - continued Netlify form debugging

--- a/pages/work.html
+++ b/pages/work.html
@@ -340,7 +340,7 @@
                 type="radio"
                 name="collegeRadio"
                 id="collegeRadioTrue"
-                value="I have graduated college/trade school"
+                value="I have attended college/trade school"
                 required
               />
               <label class="form-check-label" for="collegeRadioTrue">
@@ -353,7 +353,7 @@
                 type="radio"
                 name="collegeRadio"
                 id="collegeRadioFalse"
-                value="I have not graduated college/trade school"
+                value="I have not attended college/trade school"
                 required
               />
               <label class="form-check-label" for="collegeRadioFalse">
