work form disable attr via JS. Add name attributes to inputs missing them

--- a/pages/work.html
+++ b/pages/work.html
@@ -373,7 +373,6 @@
               class="form-control disabled-inputs"
               id="schoolName"
               placeholder="School Name"
-              disabled
             />
           </div>
           <div class="col-md-6">
@@ -387,7 +386,6 @@
               class="form-control disabled-inputs"
               id="schoolMajor"
               placeholder="Field of Study"
-              disabled
             />
           </div>
 
@@ -431,6 +429,7 @@
               class="form-control"
               id="typeOfWork"
               placeholder="Eg: Nursing, Realtor, etc."
+              name="typeOfWork"
               required
             />
           </div>
@@ -443,6 +442,7 @@
                 class="form-control"
                 type="file"
                 id="resume"
+                name="resume"
                 required
                 accept=".doc, .docx, .xml, application/msword, application/vnd.openxmlformats-officedocument.wordprocessingml.document, .odt, .pdf, .rtf, .tex, .txt, .wpd"
               />
