work form disable attr via JS. Add name attributes to inputs missing them

--- a/pages/work.html
+++ b/pages/work.html
@@ -372,6 +372,7 @@
               type="text"
               class="form-control disabled-inputs"
               id="schoolName"
+              name="schoolName"
               placeholder="School Name"
             />
           </div>
@@ -385,6 +386,7 @@
               type="text"
               class="form-control disabled-inputs"
               id="schoolMajor"
+              name="schoolMajor"
               placeholder="Field of Study"
             />
           </div>
