Reorder radio button inpuit labels. Rewrote JS to handle text graying

--- a/pages/work.html
+++ b/pages/work.html
@@ -396,26 +396,32 @@
               Have you graduated?
             </p>
             <div class="form-check">
-              <input
-                class="form-check-input disabled-inputs"
-                type="radio"
-                name="didYouGraduateRadio"
-                id="didYouGraduateRadioTrue"
-                value="I have graduated college/trade school"
-              />
-              <label class="form-check-label" for="didYouGraduateRadioTrue">
+              <label
+                class="form-check-label disabled-input-labels no-star"
+                for="didYouGraduateRadioTrue"
+              >
+                <input
+                  class="form-check-input disabled-inputs"
+                  type="radio"
+                  name="didYouGraduateRadio"
+                  id="didYouGraduateRadioTrue"
+                  value="I have graduated college/trade school"
+                />
                 Yes
               </label>
             </div>
             <div class="form-check">
-              <input
-                class="form-check-input disabled-inputs"
-                type="radio"
-                name="didYouGraduateRadio"
-                id="didYouGraduateRadioFalse"
-                value="I have not graduated college/trade school"
-              />
-              <label class="form-check-label" for="didYouGraduateRadioFalse">
+              <label
+                class="form-check-label disabled-input-labels no-star"
+                for="didYouGraduateRadioFalse"
+              >
+                <input
+                  class="form-check-input disabled-inputs"
+                  type="radio"
+                  name="didYouGraduateRadio"
+                  id="didYouGraduateRadioFalse"
+                  value="I have not graduated college/trade school"
+                />
                 No
               </label>
             </div>
