Add subject input for Netlify subject email integration

--- a/pages/work.html
+++ b/pages/work.html
@@ -246,6 +246,11 @@
           data-netlify="true"
           class="row g-3 py-5"
         >
+          <input
+            type="hidden"
+            name="subject"
+            value="A New Job Search Candidate Has Emailed You:"
+          />
           <div class="col-md-6">
             <label for="firstName" class="form-label"
               >First Name <span class="text-danger">*</span></label
