Further subject test

--- a/pages/work.html
+++ b/pages/work.html
@@ -255,8 +255,10 @@
           <input
             type="hidden"
             name="subject"
+            id="subject"
             value="A New Job Search Candidate Has Emailed You:"
           />
+          <label for="subject">This is a subject test</label>
           <div class="col-md-6">
             <label for="firstName" class="form-label"
               >First Name <span class="text-danger">*</span></label
