--- a/pages/work.html
+++ b/pages/work.html
@@ -23,6 +23,9 @@
     />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="../css/styles/work.css" />
+
+    <!-- Icons CSS.gg -->
+    <link href="https://css.gg/facebook.css" rel="stylesheet" />
   </head>
   <body>
     <!-- START NAV -->
@@ -469,42 +472,7 @@
               />
             </div>
           </div>
-          <!-------------------------------------------------------- ADDRESS STUFF DELETE LATER -->
 
-          <!-- <div class="col-12">
-            <label for="inputAddress2" class="form-label">Address 2</label>
-            <input
-              type="text"
-              class="form-control disabled-inputs"
-              id="inputAddress2"
-              placeholder="Apartment, studio, or floor"
-              disabled
-            />
-          </div> -->
-
-          <!-- <div class="col-md-6">
-              <label for="inputCity" class="form-label">City</label>
-            <input type="text" class="form-control" id="inputCity" />
-          </div> -->
-          <!-- <div class="col-md-4">
-            <label for="inputState" class="form-label">State</label>
-            <select id="inputState" class="form-select">
-              <option selected>Choose...</option>
-              <option>...</option>
-            </select>
-          </div> -->
-          <!-- <div class="col-md-2">
-            <label for="inputZip" class="form-label">Zip</label>
-            <input type="text" class="form-control" id="inputZip" />
-          </div> -->
-          <!-- <div class="col-12">
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" id="gridCheck" />
-              <label class="form-check-label" for="gridCheck">
-                Check me out
-              </label>
-            </div>
-          </div> -->
           <div class="col-12">
             <button
               id="form-submit-button"
@@ -517,6 +485,19 @@
         </form>
       </article>
     </section>
+
+    <footer>
+      <div class="container text-center">
+        <h2 class="display-6 text-light">Powered by</h2>
+        <h2 class="display-4 text-light">
+          The Penn-Northwest Homegrown Initiative
+        </h2>
+
+        <!-- Facebook -->
+        <i class="bi bi-facebook"></i>
+      </div>
+      <div class="container text-center"></div>
+    </footer>
 
     <!-- The indeed link for seeing current job openings -->
     <!-- https://www.indeed.com/jobs?q=&l=Mercer+County+PA -->
