--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     >Find a Job</a
                   >
                 </li>
-                <li><hr class="dropdown-divider" /></li>
+                <!-- <li><hr class="dropdown-divider" /></li> -->
                 <li>
                   <a class="dropdown-item" href="./pages/work.html"
                     >View Work Page</a
