Remove subject test on form

--- a/pages/work.html
+++ b/pages/work.html
@@ -257,7 +257,7 @@
             id="subject"
             value="A New Job Search Candidate Has Emailed You:"
           />
-          <label for="subject">This is a subject test</label>
+          <label class="d-none" for="subject">This is a subject test</label>
           <div class="col-md-6">
             <label for="firstName" class="form-label"
               >First Name <span class="text-danger">*</span></label
