Added hidden div for anchor tag href on work.html

--- a/pages/work.html
+++ b/pages/work.html
@@ -81,12 +81,12 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="#">View Work Page</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#job-application"
+                  <a class="dropdown-item" href="#job-search-start-form"
                     >Find a Job</a
                   >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">View Work Page</a>
                 </li>
               </ul>
             </li>
@@ -226,6 +226,9 @@
       </div>
     </section>
 
+    <!--------------------------------- JOB SEARCH SECTION --------------------------------->
+    <!-- This div is for anchor tag relative links -->
+    <div id="job-search-start-form" class="vis-hidden">Test</div>
     <section>
       <article id="job-application" class="container">
         <h2 class="display-2">Looking For Work?</h2>
