--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <li>
                   <a
                     class="dropdown-item"
-                    href="./pages/work.html#job-application"
+                    href="./pages/work.html#job-search-start-form"
                     >Find a Job</a
                   >
                 </li>
