Init learn.html - add hrefs in prexisting nav <a> tags pointing to it

--- a/index.html
+++ b/index.html
@@ -91,28 +91,20 @@
                     >Find a Job</a
                   >
                 </li>
-                <!-- <li><hr class="dropdown-divider" /></li> -->
+
                 <li>
                   <a class="dropdown-item" href="./pages/work.html"
                     >View Work Page</a
                   >
                 </li>
-                <!-- <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li> -->
               </ul>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="./pages/work.html"
-                >Work</a
-              >
-            </li> -->
+
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/work.html">Learn</a>
+              <a class="nav-link" href="./pages/learn.html">Learn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/play.html">Play</a>
@@ -179,16 +171,17 @@
                 error consequatur nulla et.
               </p>
               <div class="work-scrollIn-class scrollIn">
-                <h3 class="display-4">Learn Fast</h3>
+                <h3 class="display-4">Job Search Help</h3>
                 <!-- <button type="button" class="btn btn-secondary">
                   Secondary
                 </button> -->
               </div>
               <p class="lead work-scrollIn-class scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                Looking for work and don't know where to start, or just need a
+                helping hand? Eius odit suscipit perspiciatis? Obcaecati
+                molestiae in, magnam unde veritatis consectetur fugit dolorum,
+                saepe ipsam iste accusantium delectus error consequatur nulla
+                et.
               </p>
               <div class="work-scrollIn-class scrollIn">
                 <a
@@ -352,7 +345,7 @@
                   >
                 </li>
                 <li>
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/learn.html"
                     >Learn <span>&gt;</span></a
                   >
                 </li>
@@ -383,7 +376,7 @@
                 <li>
                   <a
                     class="footer-list-item"
-                    href="./pages/work.html#job-application"
+                    href="./pages/work.html#job-search-start-form"
                     >Get Help Finding Work <span>&gt;</span></a
                   >
                 </li>
@@ -494,7 +487,7 @@
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a
                     class="footer-list-item"
-                    href="./pages/work.html#job-application"
+                    href="./pages/work.html#job-search-start-form"
                     >Get Help Finding Work <span>&gt;</span></a
                   >
                 </li>
@@ -509,7 +502,7 @@
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
+                  <a class="footer-list-item" href="./pages/learn.html"
                     >Learn <span>&gt;</span></a
                   >
                 </li>
