--- a/pages/work.html
+++ b/pages/work.html
@@ -97,7 +97,7 @@
               <a class="nav-link" aria-current="page" href="#">Live</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/work.html">Learn</a>
+              <a class="nav-link" href="./learn.html">Learn</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./pages/play.html">Play</a>
