--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
   </head>
   <body class="bg-light">
     <!------------------------------------------------------ START NAV ------------------------------------------------------>
-    <nav
-      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
-    >
+    <nav class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow">
       <div id="nav-div" class="container-fluid">
         <a class="navbar-brand fs-3 d-none d-lg-block" href="./index.html">
           <img
