--- a/pages/learn.html
+++ b/pages/learn.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../css/styles/learn.css" />
   </head>
   <body>
-    <!-- START NAV -->
+    <!----------------------------- START NAV ----------------------------->
     <nav
       class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
     >
@@ -106,8 +106,24 @@
         </div>
       </div>
     </nav>
-    <!-- END NAV -->
+    <!------------------------------------ END NAV ------------------------------------>
 
+    <header class="shadow-lg text-light">
+      <div class="text-center container d-none d-sm-block">
+        <h1 class="display-1">Learn</h1>
+      </div>
+      <div class="container text-start d-block d-sm-none">
+        <h1 class="display-1">Learn</h1>
+      </div>
+
+      <div class="container">
+        <p class="lead display-6">
+          Mercer County is Home To Many Prestigious Colleges and Trade Schools
+        </p>
+      </div>
+    </header>
+
+    <main style="height: 100rem; width: 100%"></main>
     <script src="../js/bootstrap.bundle.js" async defer></script>
 
     <script src="" async defer></script>
