Layout of Learn page determined. Initial colleges sections added

--- a/pages/learn.html
+++ b/pages/learn.html
@@ -108,6 +108,7 @@
     </nav>
     <!------------------------------------ END NAV ------------------------------------>
 
+    <!----------------- HEADER ----------------->
     <header class="shadow-lg text-light">
       <div class="text-center container d-none d-sm-block">
         <h1 class="display-1">Learn</h1>
@@ -123,7 +124,182 @@
       </div>
     </header>
 
-    <main style="height: 100rem; width: 100%"></main>
+    <main class="container colleges">
+      <h2 class="display-1 text-center">Our Schools</h2>
+      <!--------------------------- PENN STATE SHENANGO --------------------------->
+      <section class="d-none d-lg-flex">
+        <article>
+          <h3 class="display-3">Penn State Shenango</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://shenango.psu.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Penn State's Website"
+          >
+            View College Site
+          </a>
+        </article>
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/pennstate-shenango.jpg"
+            alt="Penn State Shenango"
+          />
+        </aside>
+      </section>
+
+      <!-- PENN STATE MOBILE -->
+      <section class="d-lg-none">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/pennstate-shenango.jpg"
+            alt="Penn State Shenango"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Penn State Shenango</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://shenango.psu.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Penn State's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!--------------------------- GROVE CITY COLLEGE --------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/grove-city-college.png"
+            alt="Grove City College"
+          />
+        </aside>
+        <article class="text-end">
+          <h3 class="display-3">Grove City College</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://www.gcc.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Grove City's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
+
+      <!-- GROVE CITY MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/grove-city-college.png"
+            alt="Grove City College"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Grove City College</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://www.gcc.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Grove City's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!-------------------------------- THIEL UNIVERSITY -------------------------------->
+      <section class="d-none d-lg-flex section-margin-top">
+        <article>
+          <h3 class="display-3">Thiel University</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://www.thiel.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Thiel University's Website"
+          >
+            View College Site
+          </a>
+        </article>
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/thiel.jpg"
+            alt="Penn State Shenango"
+          />
+        </aside>
+      </section>
+
+      <!-- THIEL UNIVERSITY MOBILE -->
+      <section class="d-lg-none section-margin-top">
+        <aside>
+          <img
+            class="border shadow-lg"
+            src="../images/schools/thiel.jpg"
+            alt="Penn State Shenango"
+          />
+        </aside>
+        <article class="pt-3">
+          <h3 class="display-3">Thiel University</h3>
+          <p class="lead">
+            "We are innovators and achievers driven to shape a better future for
+            ourselves and the communities around us. Penn State Shenango
+            students experience unrivaled academics, vibrant campus life, and
+            graduate in confidence with top-ranked career services. "
+          </p>
+          <a
+            href="https://www.thiel.edu/"
+            type="button"
+            class="btn btn-success btn-lg"
+            alt="A link to Thiel University's Website"
+          >
+            View College Site
+          </a>
+        </article>
+      </section>
+      <hr />
+
+      <!--  -->
+      <section style="height: 100rem; width: 100%"></section>
+    </main>
     <script src="../js/bootstrap.bundle.js" async defer></script>
 
     <script src="" async defer></script>
